Remove css main nav FOUC (fix IE bug with menu not showing)

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -6576,11 +6576,6 @@ form.d-search-input-form {
   }
 }
 
-/* line 59, ../styles/components/_nav-main-menu.scss */
-.megamenu > li + li {
-  visibility: hidden;
-}
-
 @media only screen and (min-width: 960px) {
   /* line 65, ../styles/components/_nav-main-menu.scss */
   .megamenu > li:last-child {
