--- a/assets/styles/components/_nav-main-menu.scss
+++ b/assets/styles/components/_nav-main-menu.scss
@@ -42,7 +42,7 @@
   background-color: $dark-gray; 
   @include prefixer(transition, $transition-bg);
 
-  display:none; // hidemenu on mobile at start  
+  display: none; // hidemenu on mobile at start  
 
   @include gs-media(d) {
     background-color: $black; 
@@ -56,9 +56,9 @@
 
 // hide all but first list item (to prevent FOUC before javascript loads)
 // we need to show first list item because it is the mobile menu trigger button
-.megamenu > li + li {
-   visibility: hidden;
-}
+// .megamenu > li + li {
+//    visibility: hidden;
+// }
 
 
 // float the search icon on desktop to the right of the screen
